check email verification for login